--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true
   },
-  "include": ["**/*.ts", "src/concatenation.tsx"]
+  "include": ["**/*.ts"]
 }
